# boltzmann-brain

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS  LICENSE  README  README.md  boltzmann-brain.cabal  flake.nix  hie.yaml  shell.nix  stack.yaml
Data/Boltzmann/: Compiler.hs  System.hs
Data/Boltzmann/Compiler/Haskell/: Algebraic.hs  Helpers.hs  Matrix.hs  MaybeT.hs  Rational.hs
Data/Boltzmann/Internal/: Annotations.hs  Logging.hs  Parser.hs  ParserUtils.hs  TH.hs  Tuner.hs  Utils.hs
Data/Boltzmann/System/: Annotations.hs  Errors.hs  Jacobian.hs  Oracle.hs  Paganini.hs  Parser.hs  Renderer.hs  Sampler.hs  Specification.hs  Tuner.hs  Utils.hs  Warnings.hs
Data/Boltzmann/System/Parser/: Algebraic.hs  Rational.hs
Data/Boltzmann/System/Tuner/: Algebraic.hs  Rational.hs  Utils.hs
app/: Compile.hs  Main.hs  Tune.hs
bb-app/: Main.hs
bb-text-app/: Main.hs
examples/: .ill-formed.in.swp  binary-lambda-terms.in  binary.in  boolean.in  clashing-cons.in  closed-lambda-terms.in  gen-motzkin.in  ill-formed-2.in  ill-formed.in  ill-founded.in  inconsistent.in  infinite-structure.in  lambda-terms.in  motzkin.in  normal-forms.in  rational.in  single-cons.in  trees.in  tuples.in
examples/algebraic/: sc-spec.alg  trees.alg
examples/modules/: BLambda.hs  Binary.hs  Boolean.hs  ClosedLambda.hs  ExampleSpec.hs  Lambda.hs  Motzkin.hs  NormalF.hs  Trees.hs  Tuples.hs
examples/rational/: alphabet-prefix.rat  custom-weights.rat  example-spec.rat  no-terminal-transition.rat  not-sc-spec.rat
examples/specs/: binary-words.alg  binary.alg  boolean.alg  gen-motzkin.alg  ill-founded.alg  lambda-terms.alg  motzkin.alg  not-sc-spec.alg  trees.alg  tuned-motzkin.alg
medulla/: README.md  setup.py
medulla/medulla/: __main__.py
paganini/: LICENSE  README.md  setup.py
paganini/paganini/: __main__.py  tests.py  tuner.py
scripts/sampler-template/: LICENSE  README.md  sampler-template.cabal  stack.yaml
scripts/sampler-template/app/: Main.hs
src/: BoltzmannSystem.hs  Combinatorial.hs  Compiler.hs  Errors.hs  Jacobian.hs  NaiveCompiler.hs  Oracle.hs  Parser.hs  Semiring.hs  System.hs
src/Compiler/Haskell/: Helpers.hs  MaybeT.hs  Naive.hs
src/Compiler/Text/: Boltzmann.hs
src/Oracle/: Banach.hs  Newton.hs
src/System/: Boltzmann.hs
