name:                boltzmann-brain
version:             1.4
synopsis:            Boltzmann sampler compiler for combinatorial systems.
description:         Boltzmann Brain is a combinatorial system sampler compiler.
                     Using an easy and intuitive specification input representing a
                     combinatorial system, Boltzmann Brain constructs a working,
                     self-contained module implementing a dedicated singular,
                     rejection-based Boltzmann sampler with some additional
                     control over the constructor frequencies in the generated structures.
homepage:            https://github.com/maciej-bendkowski/boltzmann-brain
license:             BSD3
license-file:        LICENSE
author:              Maciej Bendkowski
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2017-2018 Maciej Bendkowski
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Boltzmann.System
                     , Data.Boltzmann.System.Utils
                     , Data.Boltzmann.System.Parser
                     , Data.Boltzmann.System.Errors
                     , Data.Boltzmann.System.Warnings
                     , Data.Boltzmann.System.Tuner
                     , Data.Boltzmann.System.Sampler
                     , Data.Boltzmann.System.Renderer
                     , Data.Boltzmann.Internal.Annotations
                     , Data.Boltzmann.Internal.Logging
                     , Data.Boltzmann.Internal.Parser
                     , Data.Boltzmann.Internal.Utils
                     , Data.Boltzmann.Compiler
                     , Data.Boltzmann.Compiler.Haskell.Helpers
                     , Data.Boltzmann.Compiler.Haskell.Algebraic
                     , Data.Boltzmann.Compiler.Haskell.Rational
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6
                     , megaparsec >= 5.2.0
                     , haskell-src-exts == 1.17.1
                     , mtl >= 2.2.1
                     , multiset >= 0.3.3
                     , hmatrix >= 0.18.0.0
                     , process >= 1.4.3.0
                     , aeson >= 1.1.2.0
                     , transformers >= 0.5.4.0
                     , MonadRandom >= 0.5.1
                     , graphviz >= 2999.18
                     , text >= 1.2.2.2
                     , random >= 1.1
                     , time >= 1.6.0.1
                     , pretty-terminal >= 0.1.0.0
                     , edit-distance >= 0.2.2.1
  ghc-options:         -O2
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010

executable bb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6
                     , megaparsec >= 5.2.0
                     , bytestring >= 0.10.8.1
                     , aeson >= 1.1.2.0
                     , text >= 1.2.2.2
                     , directory >= 1.3.0.0
                     , boltzmann-brain
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maciej-bendkowski/boltzmann-brain
