name:                boltzmann-brain
version:             1.6
synopsis:            Analytic sampler compiler for combinatorial systems.
description:         Boltzmann Brain is a combinatorial system sampler compiler.
                     Using an easy and intuitive specification input representing a
                     combinatorial system, Boltzmann Brain constructs a working,
                     self-contained module implementing a dedicated singular,
                     rejection-based Boltzmann sampler with some additional
                     control over the constructor frequencies in the generated structures.
homepage:            https://github.com/maciej-bendkowski/boltzmann-brain
license:             BSD3
license-file:        LICENSE
author:              Maciej Bendkowski
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2017-2019 Maciej Bendkowski
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Boltzmann.System
                     , Data.Boltzmann.System.Annotations
                     , Data.Boltzmann.System.Utils
                     , Data.Boltzmann.System.Errors
                     , Data.Boltzmann.System.Warnings
                     , Data.Boltzmann.System.Tuner
                     , Data.Boltzmann.System.Tuner.Algebraic
                     , Data.Boltzmann.System.Tuner.Rational
                     , Data.Boltzmann.System.Sampler
                     , Data.Boltzmann.System.Renderer
                     , Data.Boltzmann.System.Parser
                     , Data.Boltzmann.System.Parser.Algebraic
                     , Data.Boltzmann.System.Parser.Rational
                     , Data.Boltzmann.Internal.TH
                     , Data.Boltzmann.Internal.Tuner
                     , Data.Boltzmann.Internal.Annotations
                     , Data.Boltzmann.Internal.Logging
                     , Data.Boltzmann.Internal.Parser
                     , Data.Boltzmann.Internal.Utils
                     , Data.Boltzmann.Compiler
                     , Data.Boltzmann.Compiler.Haskell.Helpers
                     , Data.Boltzmann.Compiler.Haskell.Algebraic
                     , Data.Boltzmann.Compiler.Haskell.Rational
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.2
                     , containers >= 0.5.6
                     , haskell-src-exts >= 1.21
                     , megaparsec >= 7
                     , mtl >= 2.2.1
                     , multiset >= 0.3.4.1
                     , hmatrix >= 0.18.0.0
                     , process >= 1.6.5
                     , aeson >= 1.4.6
                     , transformers >= 0.5.6
                     , MonadRandom >= 0.5.1
                     , graphviz >= 2999.20
                     , text >= 1.2.3
                     , random >= 1.1
                     , time >= 1.8
                     , pretty-terminal >= 0.1.0.0
                     , edit-distance >= 0.2.2.1
                     , template-haskell >= 2.11.1.0
  ghc-options:         -O2
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010

executable bb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       aeson 
                     , base
                     , boltzmann-brain
                     , bytestring
                     , containers 
                     , directory
                     , filepath 
                     , megaparsec
                     , text 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maciej-bendkowski/boltzmann-brain
